2006-04-06  Rodney Dawes  <dobey@novell.com>

	* */stock/generic/Makefile.am:
	* */stock/generic/stock_*.png: Removed a lot more icons which have
	been replaced or moved to other contexts to follow the Naming Spec

2006-04-06  Rodney Dawes  <dobey@novell.com>

	* 48x48/stock/generic/Makefile.am:
	* 48x48/stock/generic/stock_weather*: Remove the stock_weather icons
	from here, as they are replaced by the weather-* icons in status

2006-04-06  Rodney Dawes  <dobey@novell.com>

	* 16x16/stock/generic/Makefile.am:
	* 16x16/stock/generic/stock_weather*: Remove the stock_weather icons
	from here, as they are replaced by the weather-* icons in status

2006-04-06  Jakub Steiner <jimmac@ximian.com>

	* 22x22/actions/*: 22x22 versions of the action icons
	* 16x16/actions/*: some tweaks
	
2006-04-05  Jakub Steiner <jimmac@ximian.com>

	* 16x16/actions/*: apply tango style

2006-03-26  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-18  Rodney Dawes  <dobey@novell.com>

	* MAINTAINERS: Added MAINTAINERS file

	Fixes #335023

2006-03-13  Vladimer Sichinava  <alinux@siena.linux.it>

	* configure.in: Added "ka" Georgian language.

2006-02-27  Rodney Dawes  <dobey@novell.com>

	* 24x24/status/Makefile.am: Add weather-clear-night
	* */status/weather-clear-night.png: Update style and add missing 22x22
	and 24x24 sizes

2006-02-26  Rodney Dawes  <dobey@novell.com>

	* */status/Makefile.am: Update for weather-clear at missing sizes
	* */status/weather-clear.*: Update style for weather-clear icon

2006-02-11  Rodney Dawes  <dobey@novell.com>

	* configure.in: Up version to 2.15.0 for HEAD

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* im-yahoo:
	* im-nov: based on work by Andreas Nilsson

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* im-*: all proper sizes. bug #330394

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* web-browser: provide all resolutions, fixes bug #330092

2006-02-10  Jakub Steiner <jimmac@ximian.com>
