@@ -1,3 +1,8 @@
+2006-04-07  Jakub Steiner <jimmac@ximian.com>
+
+	* */devices/video-display.*: contributed by Luda Ferreti
+		(#337613). Some slight modifications
+	
 2006-04-06  Rodney Dawes  <dobey@novell.com>
 
 	* */stock/generic/Makefile.am:
